--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<artifactId>spring-cloud-deployer-parent</artifactId>
-	<version>1.1.2.RELEASE</version>
+	<version>1.1.2.RELEASE-ABSA</version>
 	<groupId>org.springframework.cloud</groupId>
 	<packaging>pom</packaging>
 
@@ -59,55 +59,16 @@
 		</dependencies>
 	</dependencyManagement>
 
-	<profiles>
-		<profile>
-			<id>spring</id>
-			<activation><activeByDefault>true</activeByDefault></activation>
-			<repositories>
-				<repository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot-local</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-				</repository>
-				<repository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>http://repo.spring.io/libs-milestone-local</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</repository>
-				<repository>
-					<id>spring-releases</id>
-					<name>Spring Releases</name>
-					<url>http://repo.spring.io/release</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</repository>
-			</repositories>
-			<pluginRepositories>
-				<pluginRepository>
-					<id>spring-snapshots</id>
-					<name>Spring Snapshots</name>
-					<url>http://repo.spring.io/libs-snapshot-local</url>
-					<snapshots>
-						<enabled>true</enabled>
-					</snapshots>
-				</pluginRepository>
-				<pluginRepository>
-					<id>spring-milestones</id>
-					<name>Spring Milestones</name>
-					<url>http://repo.spring.io/libs-milestone-local</url>
-					<snapshots>
-						<enabled>false</enabled>
-					</snapshots>
-				</pluginRepository>
-			</pluginRepositories>
-		</profile>
-	</profiles>
-
+	<distributionManagement>
+		<repository>
+			<id>bison-nexus</id>
+			<name>Bison Internal Releases Repo</name>
+			<url>http://nexus3-bison-ci.nonprod.ocp.absa.co.za/repository/releases/</url>
+		</repository>
+		<snapshotRepository>
+			<id>bison-nexus</id>
+			<name>Bison Internal Snapshots Repo</name>
+			<url>http://nexus3-bison-ci.nonprod.ocp.absa.co.za/repository/snapshots/</url>
+		</snapshotRepository>
+	</distributionManagement>
 </project>
