--- a/spring-cloud-deployer-spi-test-app/pom.xml
+++ b/spring-cloud-deployer-spi-test-app/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-deployer-parent</artifactId>
-		<version>1.1.2.RELEASE</version>
+		<version>1.1.2.RELEASE-ABSA</version>
 	</parent>
 	<artifactId>spring-cloud-deployer-spi-test-app</artifactId>
 	<properties>
